# goit-web-hw-07

./: README.md  config.ini  my_selecct.py  pyproject.toml
conf/: db.py  models.py
migration/versions/: b328929bf4ff_init.py  c121e5468799_init.py  e84827530f71_init.py
seeds/: add_data.py
