[tool.poetry]
name = "hw07"
version = "0.1.0"
description = ""
authors = ["AnybodyKnows <evgeniiolavrik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
faker = "^25.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
